# recallflow_poc

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: pages.yml
docs/: architecture.md  contrast-and-screen-reader-audit.md  grounded-generation.md  keyboard-accessibility.md  resilient-ui-states.md  security-model.md  web-generation-deployment.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: credentials.rs  database.rs  lib.rs  main.rs  models.rs  state.rs  vault.rs
src-tauri/src/commands/: app.rs  attempts.rs  generation.rs  library.rs  mod.rs  secrets.rs
src-tauri/src/generation/: evaluation.rs  evidence.rs  mod.rs  orchestration.rs  segmentation.rs  selection.rs  verification.rs
src-tauri/src/generation/providers/: claude.rs  gemini.rs  mod.rs  openai.rs
src-tauri/tests/: app_info_contract.rs  database_migrations.rs  ipc_contracts.rs  mnemonic_generation_contract.rs  quiz_attempt_persistence.rs  quiz_generation_contract.rs  quiz_persistence.rs  quiz_schema_contract.rs
src-tauri/tests/fixtures/: grounded_generation_corpus.json
src/components/: AiSettings.tsx  AppNavigation.tsx  AppStatus.tsx  ConnectivityStatus.tsx  ExternalLink.tsx  ExternalQuizReference.tsx  FileDropzone.tsx  Icon.tsx  PreviewTutorial.tsx  QuizGenerator.tsx  QuizHistory.tsx  QuizLibrary.tsx  QuizSession.tsx  QuizStatisticsModal.tsx  QuizSummary.tsx  Settings.tsx
src/hooks/: useApiKeySettings.ts  useAppInfo.ts  useCopyText.ts  useMnemonicGeneration.ts  useMnemonicSave.ts  useOnlineStatus.ts  useQuizAttemptSave.ts  useQuizAttempts.ts  useQuizFileImport.ts  useQuizGeneration.ts  useQuizLibrary.ts
src/lib/: apiKeyStorage.check.ts  apiKeyStorage.ts  appInfo.ts  appPreferences.check.ts  appPreferences.ts  asyncState.ts  connectivity.ts  ipc.check.ts  ipc.ts  mnemonicGeneration.check.ts  mnemonicGeneration.ts  mnemonicProviders.ts  previewTutorial.check.ts  previewTutorial.ts  quizAnswers.check.ts  quizAnswers.ts  quizAttempts.ts  quizGeneration.check.ts  quizGeneration.ts  quizGenerationReference.ts  runtime.ts  (+12 more)
worker/: wrangler.jsonc
(+3 files in other folders)
