[package]
name = "recallflow"
version = "0.1.0"
description = "A local-first study application"
edition = "2021"

[lib]
name = "recallflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite"] }
tauri = { version = "2", features = [] }
tauri-plugin-stronghold = "2"

[profile.dev.package.scrypt]
opt-level = 3
