[package]
name = "recallflow"
version = "0.1.0"
description = "A local-first study application"
edition = "2021"

[lib]
name = "recallflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
keyring = { version = "4.1.5", default-features = false, features = ["v1"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite"] }
tauri = { version = "2", features = [] }
zeroize = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSApplication", "NSImage", "NSResponder"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["NSData"] }
